--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,43 @@
+# Logs
 *.log
+npm-debug.log
+yarn-error.log
+
+# OS / Éditeurs
 .DS_Store
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
+Thumbs.db
 /.idea
-/.nova
-/.phpunit.cache
 /.vscode
+/.fleet
 /.zed
+/.nova
+
+# Environnements
+.env
+.env.*
 /auth.json
+
+# PHP / Laravel
+/vendor
+/.phpunit.cache
+.phpunit.result.cache
+.phpactor.json
+Homestead.json
+Homestead.yaml
+
+# Node / Vite
 /node_modules
 /public/build
 /public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
-npm-debug.log
-Thumbs.db
-yarn-error.log
+
+# Storage Laravel (le dossier reste, le contenu non)
+storage/*.key
+storage/*.sqlite
+storage/logs/*
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+!storage/.gitignore
+
+# Sécurité / archives
 cijet.zip
