--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,60 +5,21 @@
 
     RewriteEngine On
 
-    ##################################################
-    # 1. FORCER HTTPS
-    ##################################################
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-    ##################################################
-    # 2. Handle Authorization & X-XSRF-Token Headers
-    ##################################################
+    # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
+    # Handle X-XSRF-Token Header
     RewriteCond %{HTTP:x-xsrf-token} .
     RewriteRule .* - [E=HTTP_X_XSRF_TOKEN:%{HTTP:X-XSRF-Token}]
 
-    ##################################################
-    # 3. REDIRECTION TRAILING SLASHES (si pas dossier)
-    ##################################################
+    # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
-    ##################################################
-    # 4. FRONT CONTROLLER LARAVEL
-    ##################################################
+    # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
-
-##################################################
-# 5. HEADERS DE SECURITE
-##################################################
-<IfModule mod_headers.c>
-    # Protection contre le type de contenu incorrect
-    Header always set X-Content-Type-Options "nosniff"
-
-    # Protection contre le clickjacking
-    Header always set X-Frame-Options "SAMEORIGIN"
-
-    # Protection XSS
-    Header always set X-XSS-Protection "1; mode=block"
-
-    # Politique de referrer
-    Header always set Referrer-Policy "no-referrer-when-downgrade"
-
-    # CSP minimal pour autoriser JS/CSS Laravel (à adapter selon projet)
-    Header set Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self';"
-</IfModule>
-
-##################################################
-# 6. COMPATIBILITÉ FORMULAIRES AUTO-COMPLÉTION
-##################################################
-# Utiliser dans vos formulaires Laravel
-# <form method="POST" autocomplete="on">
-# <input type="email" name="email" autocomplete="email">
-# <input type="password" name="password" autocomplete="current-password">
